# esp32_ai_monitor

./: AGENTS.md  CMakeLists.txt  README.md  partitions_32mb_singleapp.csv  sdkconfig.defaults
.planning/: HANDOFF-2026-04-27-wifi-blocker.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: 2026-04-27-esp32-p4-wifi-bringup-pitfalls.md  2026-04-27-waveshare-esp32-p4-wifi6-touch-lcd-4b.md
components/network_service/: CMakeLists.txt  Kconfig.projbuild  network_service.c
components/network_service/include/: network_service.h
components/ui_service/: CMakeLists.txt  wifi_info_screen.c
components/ui_service/include/: wifi_info_screen.h
docs/: ai-agent-monitor-proposal.md
main/: CMakeLists.txt  idf_component.yml  main.c
